src/components/layout-panel/styles/axes.module.css
.axes.empty {
    min-block-size: 60px;
}

.container {
    animation: fadeIn 0.4s ease-out forwards;
}

.axisContainer {
    display: grid;
    grid-template-columns: 2fr 1fr;
    grid-template-areas:
        'columns filters'
        'rows filters';
    grid-template-rows: minmax(min-content, 1fr) minmax(min-content, 1fr);
    gap: 1px;
    border-color: var(--colors-grey300);
    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.03);
    block-size: 100%;
    max-block-size: 20vh;
    overflow-y: auto;
}

.axisContainer.lineList {
    grid-template-areas: 'columns filters';
    grid-template-rows: minmax(min-content, 1fr);
}

.expandButton {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 2px;
    box-shadow:
        inset 0 4px 8px -6px rgba(40, 60, 85, 0.05),
        inset 0 -4px 8px -6px rgba(40, 60, 85, 0.05);
    background-color: var(--colors-white);
    cursor: pointer;
    transition:
        background-color 0.15s ease,
        color 0.15s ease;
}

.expandButton:hover {
    background-color: var(--colors-grey100);
}

.loadingSkeletons {
    display: flex;
    flex-wrap: wrap;
    gap: 6px;
    padding: var(--spacers-dp8) 6px;
}

@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}

